<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_20"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_size24"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="@dimen/margin_16" />

        <EditText
            android:id="@+id/email_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"/>


        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/give_password"
            android:layout_marginTop="@dimen/margin_20"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>